# shell-nostd

./: CHANGELOG.md  Cargo.toml  README.md
src/: ai.rs  builtin.rs  env.rs  lib.rs  parser.rs  pipe.rs  prompt.rs  script.rs  shell.rs
